--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ pip==20.2.4
 nbsphinx==0.7.1
 sphinx-autoapi==1.5.1
 sphinx-rtd-theme==0.5.0
+sphinx==3.4.3
 recommonmark==0.6.0
 twine>=3.1.1
 matplotlib>=3.1.2
